fix: Downgrade to Netty 4.1.x in native image.
We can’t get Netty 4.2 to work on GraalVM 21 and higher, and the driver can deal with both Netty 4.1 and 4.2, so this seems to be the safer option and fixes #1718.

Signed-off-by: Michael Simons <michael@simons.ac>